@@ -385,14 +385,14 @@ body.explorer-open {
 
     .explorer {
         width: 400px;
-        position: fixed;
-        top: 0 !important;
-        left: $menu-width;
+        position: absolute;
+        top: 0;
+        left: 99%;
         margin-top: 175px; // same as .nav-main minus 1 pixel for border
     }
 
     .dl-menu {
-        position: fixed;
+        position: absolute;
     }
 
     body.nav-open {
